fix: copyOf instead of Collections.unmodifiableList
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>